boreal/tests/assets/invalid_files/compilation/duplicated_rule_tag.yar
rule a: foo bar foo {
    condition: true
}
